--- a/BG_insilico.ipynb
+++ b/BG_insilico.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### STN Model\n",
+    "### Neuron Model\n",
     "**The microcircuits of striatum in silico**\n",
     "\n",
     "### modeling step\n",
