--- a/BG_insilico.ipynb
+++ b/BG_insilico.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### STN Model\n",
+    "### Neuron Model\n",
     "**The microcircuits of striatum in silico**\n",
     "\n",
     "### modeling step\n",
@@ -657,6 +657,26 @@
     "plt.ylabel('Cortex Input (nA)')\n",
     "plt.title('Cortex Input Pattern')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Future Work\n",
+    "### paper: **Dopamine depletion leads to pathological synchronization of distinct basal ganglia loops in the beta band**\n",
+    "\n",
+    "- point neurons: adaptive exponential neuron model \n",
+    "\n",
+    "<img src = \"eqs1.png\" width = \"600\" height = \"80\">\n",
+    "\n",
+    "- excitatory and inhibitory conductance present exponential decays\n",
+    "\n",
+    "<img src = \"eqs2.png\" width = \"300\" height = \"100\">\n",
+    "\n",
+    "- evolution of the adaptation variable w \n",
+    "\n",
+    "<img src = \"eqs3.png\" width = \"400\" height = \"100\">"
    ]
   },
   {
