--- a/BG_insilico.ipynb
+++ b/BG_insilico.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,6 @@
     "# D1 - dSPN (inhibitory), D2 - iSPN (excitatory)\n",
     "# Fountas, Zafeirios. \"Action selection in the rhythmic brain: The role of the basal ganglia and tremor.\" PhD Thesis, Imperial College London (2016).\n",
     "\n",
-    "\n",
     "a = 0.01 * br.ms\n",
     "b = -20 * br.ms\n",
     "c = -55 * br.mV\n",
@@ -265,7 +264,7 @@
     "BITA1 = 0.5     # Humphries 2014\n",
     "BITA2 = 0.3     # Humphries 2014\n",
     "        \n",
-    "sigma_msn = 14.0 * br.mV\n",
+    "sigma_msn = 14.0 * br.mV # Fountas 2016\n",
     "\n",
     "def Neuron_dSPN(N):\n",
     "\n",
