--- a/BG_insilico.ipynb
+++ b/BG_insilico.ipynb
@@ -667,15 +667,15 @@
     "\n",
     "- point neurons: adaptive exponential neuron model \n",
     "\n",
-    "<img src = \"./figure/eqs1.png" width = \"600\" height = \"80\">\n",
+    "<img src = \"./figure/eqs1.png\" width = \"600\" height = \"80\">\n",
     "\n",
     "- excitatory and inhibitory conductance present exponential decays\n",
     "\n",
-    "<img src = \"./figure/eqs2.png" width = \"300\" height = \"100\">\n",
+    "<img src = \"./figure/eqs2.png\" width = \"300\" height = \"100\">\n",
     "\n",
     "- evolution of the adaptation variable w \n",
     "\n",
-    "<img src = \"./figure/eqs3.png" width = \"400\" height = \"100\">"
+    "<img src = \"./figure/eqs3.png\" width = \"400\" height = \"100\">"
    ]
   },
   {
