--- a/BG_insilico.ipynb
+++ b/BG_insilico.ipynb
@@ -666,6 +666,7 @@
     "### paper: **Dopamine depletion leads to pathological synchronization of distinct basal ganglia loops in the beta band**\n",
     "\n",
     "- point neurons: adaptive exponential neuron model \n",
+    "- SNr model\n",
     "\n",
     "<img src = \"./figure/eqs1.png\" width = \"600\" height = \"80\">\n",
     "\n",
