--- a/BG_insilico_SPN.ipynb
+++ b/BG_insilico_SPN.ipynb
@@ -45,6 +45,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### input from cortex \n",
+    "\n",
+    "def generate_cortex_input(duration, dt):\n",
+    "    t = np.arange(0, duration, dt)\n",
+    "    input_values = np.ones_like(t) * 20  \n",
+    "    \n",
+    "    spike_time = 50 \n",
+    "    spike_duration = 20\n",
+    "    spike_value = 90\n",
+    "\n",
+    "    spike_indices = np.logical_or(t >= spike_time, t < spike_time + spike_duration)\n",
+    "    for i in range(min(spike_time, len(input_values)), min(spike_time + spike_duration, len(input_values))):\n",
+    "        input_values[i] = spike_value\n",
+    "            \n",
+    "    return t * ms, input_values\n",
+    "\n",
+    "dt = 0.1\n",
+    "defaultclock.dt = 1 * ms  \n",
+    "duration = 10000 * ms  \n",
+    "t, cortex_input = generate_cortex_input(duration, defaultclock.dt)\n",
+    "input_array = TimedArray(cortex_input, dt=dt*ms)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -98,35 +127,6 @@
     "KAPA = 0.0289   # Humphries etal 2009a\n",
     "ALPHA = 0.032   # Humphries etal 2009a\n",
     "N = 10000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### input from cortex (Set 3)\n",
-    "\n",
-    "def generate_cortex_input(duration, dt):\n",
-    "    t = np.arange(0, duration, dt)  # 시간 배열 생성\n",
-    "    input_values = np.ones_like(t) * 20  # 기본 값으로 초기화\n",
-    "    \n",
-    "    spike_time = 50 \n",
-    "    spike_duration = 20\n",
-    "    spike_value = 90\n",
-    "\n",
-    "    spike_indices = np.logical_or(t >= spike_time, t < spike_time + spike_duration)\n",
-    "    for i in range(min(spike_time, len(input_values)), min(spike_time + spike_duration, len(input_values))):\n",
-    "        input_values[i] = spike_value\n",
-    "            \n",
-    "    return t * ms, input_values\n",
-    "\n",
-    "dt = 0.1\n",
-    "defaultclock.dt = 1 * ms  # 시뮬레이션 시간 단계 설정\n",
-    "duration = 10000 * ms  # 시뮬레이션 시간 설정\n",
-    "t, cortex_input = generate_cortex_input(duration, defaultclock.dt)\n",
-    "input_array = TimedArray(cortex_input, dt=dt*ms)"
    ]
   },
   {
@@ -246,7 +246,6 @@
     "\n",
     "dv_monitor = StateMonitor(dSPN, variables='v', record=True)\n",
     "spike_monitor = SpikeMonitor(dSPN)\n",
-    "# Add PopulationRateMonitor to calculate firing rate\n",
     "rate_monitor = PopulationRateMonitor(dSPN)  # Bin size of 10ms\n",
     "\n",
     "# Include rate_monitor in the Network\n",
