--- a/bg_insilico/test.ipynb
+++ b/bg_insilico/test.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "def main():\n",
     "    # Define parameters for NeuronModel\n",
-    "    params = load_params('./SPN.json')\n",
+    "    params = load_params('./QIF_DOP.json')\n",
     "    N = params.pop('N')\n",
     "    \n",
     "    # Define v_reset\n",
