--- a/bg_insilico/test.ipynb
+++ b/bg_insilico/test.ipynb
@@ -190,7 +190,7 @@
    ],
    "source": [
     "### Adaptive Exponential Integrate and Fire \n",
-    "json_file = './params/AdEx.json'  # 사용할 JSON 파일 경로\n",
+    "json_file = './params/AdEx.json'  \n",
     "\n",
     "# load parameters\n",
     "params, model_name = load_params(json_file)\n",
@@ -283,8 +283,8 @@
     }
    ],
    "source": [
-    "### Adaptive Exponential Integrate and Fire (v = vth)\n",
-    "json_file = './AdEx2.json'  # 사용할 JSON 파일 경로\n",
+    "### Adaptive Exponential Integrate and Fire (v = threshold)\n",
+    "json_file = './AdEx2.json'  \n",
     "\n",
     "# load parameters\n",
     "params, model_name = load_params(json_file)\n",
@@ -321,8 +321,8 @@
     }
    ],
    "source": [
-    "### Adaptive Exponential Integrate and Fire (v > th)\n",
-    "json_file = './AdEx2.json'  # 사용할 JSON 파일 경로\n",
+    "### Adaptive Exponential Integrate and Fire (v > threshold)\n",
+    "json_file = './AdEx2.json' \n",
     "\n",
     "# load parameters\n",
     "params, model_name = load_params(json_file)\n",
@@ -359,8 +359,8 @@
     }
    ],
    "source": [
-    "### Adaptive Exponential Integrate and Fire (v < vreset)\n",
-    "json_file = './AdEx2.json'  # 사용할 JSON 파일 경로\n",
+    "### Adaptive Exponential Integrate and Fire (v < threshold)\n",
+    "json_file = './AdEx2.json' \n",
     "\n",
     "# load parameters\n",
     "params, model_name = load_params(json_file)\n",
@@ -475,15 +475,15 @@
     }
    ],
    "source": [
-    "json_file = './params/QIF.json'  # 사용할 JSON 파일 경로\n",
+    "json_file = './params/QIF.json'  \n",
     "\n",
     "# load parameters\n",
     "params, model_name = load_params(json_file)\n",
     "\n",
     "N = params.pop('N')['value']  \n",
-    "Initialize_time = 1000 * ms  # Define Initialize_time as needed\n",
-    "I_values = [-90, -60, -30, 0, 30, 60, 90, 120, 150, 180]  # 예시로 사용할 전류 값들\n",
-    "current_start_times = [200 * ms * i for i in range(len(I_values))]  # Adjust start times as needed\n",
+    "Initialize_time = 1000 * ms  \n",
+    "I_values = [-90, -60, -30, 0, 30, 60, 90, 120, 150, 180] \n",
+    "current_start_times = [200 * ms * i for i in range(len(I_values))]  \n",
     "current_durations = [200 * ms] * len(I_values)\n",
     "\n",
     "all_results, all_currents, total_time, injection_times = run_simulation(N, params, model_name, I_values)\n",
@@ -523,9 +523,9 @@
     "params, model_name = load_params(json_file)\n",
     "\n",
     "N = params.pop('N')['value']  \n",
-    "Initialize_time = 1000 * ms  # Define Initialize_time as needed\n",
-    "I_values = [-90, -60, -30, 0, 30, 60, 90, 120, 150, 180]  # 예시로 사용할 전류 값들\n",
-    "current_start_times = [200 * ms * i for i in range(len(I_values))]  # Adjust start times as needed\n",
+    "Initialize_time = 1000 * ms  \n",
+    "I_values = [-90, -60, -30, 0, 30, 60, 90, 120, 150, 180]  \n",
+    "current_start_times = [200 * ms * i for i in range(len(I_values))]  \n",
     "current_durations = [200 * ms] * len(I_values)\n",
     "\n",
     "all_results, all_currents, total_time, injection_times = run_simulation(N, params, model_name, I_values)\n",
