--- a/bg_insilico/test_dynamic.ipynb
+++ b/bg_insilico/test_dynamic.ipynb
@@ -170,6 +170,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Add dynamics for threshold \n",
+    " $$\n",
+    "\\text{th} = \\text{clip}(\\text{th} + \\text{rand}() \\times 0.2\\,\\text{mV} - 0.1\\,\\text{mV}, 0.1\\,\\text{mV}, 0.9\\,\\text{mV})\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
