--- a/bg_insilico/test_dynamic.ipynb
+++ b/bg_insilico/test_dynamic.ipynb
@@ -39,15 +39,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- a (tonic firing): absence of threshold voltage(low tauw, b = 0)\n",
+    "- b (adaptation): k value affects the first inter-spike intervals (high tauw than a)\n",
+    "- c (initial burst): initial spike intensively generated, spiking starts with one or several sharp reset followed by broad reset (low C, high gL, EL) \n",
+    "\n",
+    "![parameter in Fig](/Users/tacolab4/Desktop/neuroscience/code/bg_insilico_AdEx_QIF/figure/table.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "- a: \n",
-    "- b: \n",
-    "- c: "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
