--- a/meeting_1028.ipynb
+++ b/meeting_1028.ipynb
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "### Result with inh/ext input with neurons (normal) \n",
+    "### Result with inh/ext input with neurons (Dop) \n",
     "from simulation_runner_syn import run_simulation_with_inh_ext_input, plot_raster\n",
     "from brian2 import *\n",
     "\n",
