--- a/meeting_1118.ipynb
+++ b/meeting_1118.ipynb
@@ -13,10 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, Any\n",
+    "# load library \n",
     "import numpy as np\n",
     "from brian2 import *\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from typing import Dict, Any\n",
     "import networkx as nx"
    ]
   },
@@ -236,7 +238,7 @@
     "    d       : volt/second\n",
     "    '''\n",
     "\n",
-    "    scenario = create_scenario(n_fsn, n_msn_d1)\n",
+    "    scenario = connect_prob(n_fsn, n_msn_d1)\n",
     "\n",
     "    FSN = NeuronGroup(n_fsn, neuron_eqs,\n",
     "                      threshold='v >= th',\n",
@@ -258,7 +260,7 @@
     "    region_size = n_fsn // 3\n",
     "    stim_start = stim_region * region_size\n",
     "    stim_end = (stim_region + 1) * region_size\n",
-    "    FSN.I_ext[stim_start:stim_end] = 800.0 * pA\n",
+    "    FSN.I_ext[stim_start:stim_end] = 600.0 * pA\n",
     "\n",
     "    MSN_D1 = NeuronGroup(n_msn_d1, neuron_eqs,\n",
     "                         threshold='v >= th',\n",
