--- a/bg_insilico/params_ref/calcurate.ipynb
+++ b/bg_insilico/params_ref/calcurate.ipynb
@@ -2,179 +2,379 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a504259b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-60.381440000000005"
+       "-68.41856000000001"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "-64.4*(1+0.8*(-0.078))"
+    "-64.4*(1+(-0.8)*(-0.078))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "14679262",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-65.40464000000001"
+       "-63.39536000000001"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "-64.4*(1+(-0.2)*(-0.078))"
+    "-64.4*(1+(0.2)*(-0.078))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b42dc584",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-47.12152"
+       "-63.078480000000006"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# gpet1 el\n",
-    "-55.1*(1+(0.8)*(-0.181))"
+    "-55.1*(1+(-0.8)*(-0.181))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "367d7278",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-57.09462"
+       "-53.105380000000004"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "-55.1*(1+(-0.2)*(-0.181))"
+    "-55.1*(1+(0.2)*(-0.181))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "664a02a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-80.051776"
+       "-76.348224"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# msnd1 vr\n",
-    "-78.2*(1+(0.8)*(0.0296))"
+    "-78.2*(1+(-0.8)*(0.0296))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "3484c625",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-77.737056"
+       "-78.662944"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "-78.2*(1+(-0.2)*(0.0296))"
+    "-78.2*(1+(0.2)*(0.0296))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "34afc21d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42.815999999999995"
+       "90.98400000000001"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# msnd1 d\n",
-    "66.9*(1+(0.8)*(-0.45))"
+    "66.9*(1+(-0.8)*(-0.45))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "ccd92b62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "72.921"
+       "60.879000000000005"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "66.9*(1+(-0.2)*(-0.45))"
+    "66.9*(1+(0.2)*(-0.45))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75d81474",
+   "metadata": {},
+   "source": [
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba9b29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6399999999999999"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# stn \n",
+    "1-(-0.45)*(-0.8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "05df6ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.09"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-(-0.45)*(0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4c56cb56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.808"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-(-0.24)*(-0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a29a8820",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.048"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-(-0.24)*(0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c49fe2a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16799999999999993"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# msn \n",
+    "# nmda\n",
+    "1+(1.04)*(-0.8)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1652995b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.208"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+(1.04)*(0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0e926a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7200000000000002"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+(-0.9)*(-0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5504fa17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.82"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+(-0.9)*(0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ae34e2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.176"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+(0.88)*(0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be46a07e",
    "metadata": {},
    "outputs": [],
    "source": []
